--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -245,6 +245,9 @@
   </head>
 
   <body class="gradient">
+    <h2>
+        sdasdsasdad
+    </h2>
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
