--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -248,6 +248,8 @@
     <h2>
         sdasdsasdad
     </h2>
+
+    <h3>this h3 test</h3>
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
